Junit Fix
Changes in Junit to fix compile issue in release pipeline